PIP-453 Add add-opens jvm arg for standalone use.  Also correct docker target filename.